# TODO-LIST

./: .env  Cargo.toml  README.md  Rocket.toml
export-bdd/: dbexport.pgsql
migrations/2021-02-18-003113_todo/: down.sql  up.sql
src/: add_entry.rs  cors.rs  main.rs  model.rs  models.rs  routes.rs  schema.rs
