[package]
name = "TODO-List"
version = "0.1.0"
authors = ["Geoffrey <geoffrey.brunet@icloud.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.7"
diesel = { version = "1.4.5", features = ["postgres"] }
chrono = { version = "0.4.19", features = ["serde"] }
dotenv = "0.15.0"

[dependencies.rocket_contrib]
version = "*"
default-features = false
features = ["json"]