[package]
name = "TODO-List"
version = "0.1.0"
authors = ["Geoffrey <geoffrey.brunet@icloud.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.7"
diesel = { version = "1.4.5", features = ["postgres", "chrono"] }
chrono = { version = "0.4.19", features = ["serde"] }
dotenv = "0.15.0"
r2d2 = "0.8.9"
r2d2-diesel = "1.0.0"
serde = { version = "1.0.123", features = ["derive"] }
serde_derive = "1.0.123"
serde_json = "1.0.62"

[dependencies.rocket_contrib]
version = "0.4.7"
default-features = false
features = ["tera_templates", "json", "serve"]